# backend/src/api/handler/users.go
@@ -21,6 +21,16 @@ func NewUserHandler(cfg *config.Config) *UserHandler {
 	}
 }
 
+// RegisterUser godoc
+// @Summary RegisterUser
+// @Description register users with username and password
+// @Tags Users
+// @Accept json
+// @produces json
+// @Param Request body dto.RegisterByUsername true "RegisterByUsername"
+// @Success 201 {object} helper.Response "response"
+// @Failure 400 {object} helper.Response "Bad request"
+// @Router /v1/users/register [post]
 func (uh *UserHandler) RegisterUser(ctx *gin.Context) {
 	req := &dto.RegisterByUsername{}
 	err := ctx.ShouldBindJSON(&req)
@@ -36,6 +46,16 @@ func (uh *UserHandler) RegisterUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, helper.GenerateBaseResponse("created", helper.Success, true))
 }
 
+// LoginUser godoc
+// @Summary LoginUser
+// @Description Login users with username and password
+// @Tags Users
+// @Accept json
+// @produces json
+// @Param Request body dto.LoginByUsername true "LoginUser"
+// @Success 201 {object} helper.Response "response"
+// @Failure 400 {object} helper.Response "Bad request"
+// @Router /v1/users/login [post]
 func (uh *UserHandler) LoginUser(ctx *gin.Context) {
 	req := &dto.LoginByUsername{}
 	err := ctx.ShouldBindJSON(&req)
@@ -51,6 +71,16 @@ func (uh *UserHandler) LoginUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, helper.GenerateBaseResponse(result, helper.Success, true))
 }
 
+// RefreshToken godoc
+// @Summary RefreshToken
+// @Description Get a new AccessToken With Refresh token (key rotation is on)
+// @Tags Users
+// @Accept json
+// @produces json
+// @Param Request body dto.RefreshTokenDTO true "Get a new AccessToken With Refresh token"
+// @Success 201 {object} helper.Response{result=dto.TokenDetail} "AccessToken response"
+// @Failure 400 {object} helper.Response "Bad request"
+// @Router /v1/users/refresh [post]
 func (us *UserHandler) RefreshToken(ctx *gin.Context) {
 	req := &dto.RefreshTokenDTO{}
 	err := ctx.ShouldBindJSON(&req)
